# ip8-roboter-energy-management

./: .gitignore  README.md
bag_analysis/: analyse_battery_data.py  requirements.txt
current_measurement/peacefair/: client  client.cpp  server  server.cpp
hppc/: .gitignore  platformio.ini
hppc/src/: main.cpp
matlab/: soc_estimation.mlx  soc_estimation.slx  soc_estimation.slx.original  soh_estimation.slx
ros2/: all_diagnostic_keys  launch_data_collection.sh
ros2/src/battery_monitor/: package.xml  setup.py
ros2/src/battery_monitor/battery_monitor/: battery_monitor.py
ros2/src/battery_monitor/battery_monitor/gui/: dashboard.py  widgets.py
ros2/src/battery_monitor/launch/: battery_monitor.launch.py
ros2/src/battery_soc_estimator/: package.xml  setup.cfg  setup.py
ros2/src/battery_soc_estimator/battery_soc_estimator/: battery_params.py  battery_soc_estimator.py  kalman_filter.py
ros2/src/battery_soc_estimator/launch/: battery_soc_estimator.launch.py
ros2/src/battery_state_publisher/: CMakeLists.txt  package.xml
ros2/src/battery_state_publisher/include/: pzem_sensor.hpp
ros2/src/battery_state_publisher/launch/: battery_state_publisher.launch.py
ros2/src/battery_state_publisher/src/: battery_state_publisher.cpp  pzem_sensor.cpp
ros2/src/bms/: package.xml  setup.py
ros2/src/bms/bms/: battery_params.py  bms.py  dual_kalman_filter.py  soc_kalman_filter.py  soh_kalman_filter.py
ros2/src/bms/launch/: bms.launch.py
ros2/src/bms/resource/: export_i.csv  export_soc.csv  export_u.csv
ros2/src/bms/test/: bag_to_csv.py  sim.py
ros2/src/bms_state_publisher/: package.xml  setup.cfg  setup.py
ros2/src/bms_state_publisher/bms_state_publisher/: battery_sim.py  bms_state_publisher.py
ros2/src/csv_collector/: CMakeLists.txt  package.xml
ros2/src/csv_collector/src/: collector.cpp  read_diagnostic.cpp
ros2/src/metrics/: package.xml  setup.cfg  setup.py
ros2/src/metrics/metrics/: metrics.py
ros2_sim/: CMakeLists.txt  package.xml  packageInfo.mat
ros2_sim/include/ros2_sim/: ros2_sim.h  ros2_sim_a13582f8_1_gateway.h  ros2_sim_a13582f8_49.h  ros2_sim_a13582f8_49_ds.h  ros2_sim_a13582f8_49_ds_assert.h  ros2_sim_a13582f8_49_ds_dnf_p.h  ros2_sim_a13582f8_49_ds_dxf.h  ros2_sim_a13582f8_49_ds_dxf_p.h  ros2_sim_a13582f8_49_ds_dxm.h  ros2_sim_a13582f8_49_ds_external_struct.h  ros2_sim_a13582f8_49_ds_externals.h  ros2_sim_a13582f8_49_ds_f.h  ros2_sim_a13582f8_49_ds_log.h  ros2_sim_a13582f8_49_ds_mnl.h  ros2_sim_a13582f8_49_ds_mnl_p.h  ros2_sim_a13582f8_49_ds_mode.h  ros2_sim_a13582f8_49_ds_obs_act.h  ros2_sim_a13582f8_49_ds_obs_all.h  ros2_sim_a13582f8_49_ds_obs_exp.h  ros2_sim_a13582f8_49_ds_obs_il.h  ros2_sim_a13582f8_49_ds_sys_struct.h  ros2_sim_a13582f8_49_ds_tdxf_p.h  ros2_sim_a13582f8_49_ds_zc.h  ros2_sim_d2dba219_1_gateway.h  ros2_sim_d2dba219_49.h  ros2_sim_d2dba219_49_ds.h  ros2_sim_d2dba219_49_ds_assert.h  ros2_sim_d2dba219_49_ds_dnf_p.h  ros2_sim_d2dba219_49_ds_duy.h  ros2_sim_d2dba219_49_ds_dxf.h  ros2_sim_d2dba219_49_ds_dxf_p.h  ros2_sim_d2dba219_49_ds_dxm.h  ros2_sim_d2dba219_49_ds_dxy.h  ros2_sim_d2dba219_49_ds_external_struct.h  ros2_sim_d2dba219_49_ds_externals.h  ros2_sim_d2dba219_49_ds_f.h  ros2_sim_d2dba219_49_ds_log.h  ros2_sim_d2dba219_49_ds_mnl.h  ros2_sim_d2dba219_49_ds_mode.h  ros2_sim_d2dba219_49_ds_obs_act.h  (+16 more)
ros2_sim/src/: main.cpp  ros2_sim_data.cpp  ros2nodeinterface.cpp  slros2_initialize.cpp  slros_busmsg_conversion.cpp
soc_estimation/: README.md  battery_params.py  kalman_filter.py  soc_estimation.py  soh_kalman_filter.py
soc_py_V2/: battery_params.py  export_i.csv  export_soc.csv  export_u.csv  kalman_filter.py  soc_estimation.py
soh_estimation/: client.py  kalman_filter.py  plot_utils.py  soh_kalman_filter.py
src/csv_collector/src/: util.hpp
